# cdes-c-sdk-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
cdes_c/: __init__.py  models.py
