[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdes-c"
version = "0.1.0"
description = "CDES Commerce Extension - Cannabis retail, GS1, EDI, and e-commerce SDK"
readme = "README.md"
license = "MIT"
authors = [{ name = "Acidni LLC", email = "support@acidni.net" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black", "ruff", "mypy"]
shopify = ["shopify-api>=12.0.0"]
bigcommerce = ["bigcommerce-api>=0.24.0"]

[project.urls]
Homepage = "https://cdes.dev"
Documentation = "https://cdes.dev/docs/commerce"
Repository = "https://github.com/Acidni-LLC/cdes-c-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["cdes_c"]
