[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdes-c"
version = "0.1.0"
description = "CDES Commerce Extension - GS1/EDI/Inventory data models for cannabis commerce"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Acidni LLC", email = "support@acidni.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["cannabis", "commerce", "gs1", "edi", "inventory", "compliance"]

[project.urls]
Homepage = "https://cdes.acidni.net"
Repository = "https://github.com/Acidni-LLC/cdes-c-sdk-python"
Documentation = "https://cdes.acidni.net/extensions/commerce"